<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PRINT2PHONE</string>
    <string name="empty_cards_message">To start receiving offers to your phone,\n
        tap the Add (+) button to\n add all your loyalty cards today!
    </string>
    <string name="empty_offers_message">Offers not available, check your network connection and try again</string>
    <string name="action_add">Add New Card</string>
    <string name="action_delete">Delete Card</string>
    <string name="action_delete_done">DONE</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cards_grid">CardsGridActivity</string>
    <string name="title_activity_add_card">AddCardActivity</string>
    <string name="card_manual_entry">Type in your loyalty card number below</string>
    <string name="opt_in_title">Thanks for going green!</string>
    <string name="opt_in_message">All of your in store print coupons will now be sent to your phone.</string>
    <string name="dislike_feedback">Feedback</string>
    <string name="dislike_keep_offer">Keep offer</string>
    <string name="dislike_delete_offer">Delete offer</string>
    <string name="savings_ltc_stylized">You\'ve just saved: &lt;b&gt;$2.50&lt;/b&gt;</string>
    <string name="savings_ltc">You\'ve just saved: $2.50</string>
    <string name="savings_paypal">You\'ve earned $2.50 towards your PayPal account.</string>
    <string name="savings_paypal_stylized">You\'ve just earned &lt;b&gt;$2.50&lt;/b&gt; &lt;br&gt;towards your PayPal account.</string>

    <!--Static String Resources-->
    <string-array name="retailer_names">
        <item>A&amp;P</item>
        <item>Family Express</item>
        <item>Giant</item>
        <item>Giant BONUSCARD</item>
        <item>Harris Teeter</item>
        <item>Kroger</item>
        <item>Marsh</item>
        <item>Martin\'s</item>
        <item>Safeway</item>
        <item>ShopRite</item>
        <item>Stop &amp; Shop</item>
        <item>Walmart</item>
        <item>Weis</item>
    </string-array>

    <string-array name="retailer_opcos">
        <item>ap</item>
        <item>fe</item>
        <item>gl</item>
        <item>gc</item>
        <item>ht</item>
        <item>kg</item>
        <item>ms</item>
        <item>mr</item>
        <item>sw</item>
        <item>sr</item>
        <item>ss</item>
        <item>wm</item>
        <item>ws</item>
    </string-array>

    <string-array name="retailer_color_codes">
        <item>#ed1b24</item>
        <item>#34b6d6</item>
        <item>#702076</item>
        <item>#ee3a43</item>
        <item>#1b8644</item>
        <item>#0066b0</item>
        <item>#e31a30</item>
        <item>#b23239</item>
        <item>#e03d3f</item>
        <item>#ed1b2e</item>
        <item>#702076</item>
        <item>#007ecb</item>
        <item>#ff0000</item>
    </string-array>

    <string-array name="dislike_excuses">
        <item>I do not like the product.</item>
        <item>I do not like the brand.</item>
        <item>It does not offer enough savings.</item>
    </string-array>

    <!--Action Bar Strings-->
    <string name="actionbar_home_title">PRINT2PHONE</string>

    <!-- Add new card strings -->
    <string-array name="store_list">
        <item>Stop&amp;Shop</item>
        <item>Marsh</item>
        <item>Giant</item>
        <item>Weis</item>
    </string-array>

    <string name="add_card_select_store_label">Select store</string>
    <string name="add_card_add_number_label">Add card number</string>
    <string name="add_card_take_photo_label">Take a picture of your card</string>
    <string name="title_activity_store_list">StoreListActivity</string>

    <!--Capture Activity-->
    <string name="scan_hint">Center the barcode between the arrows.\nAllow the camera to focus for quicker scans.</string>
    <string name="scan_manual_entry">No barcode? Or problem scanning?</string>

    <!--Offer Notification-->
    <string name="offer_notification_thanks">Thanks for shopping at </string>
    <string name="offer_notification_savings">You have saved </string>
    <string name="offer_notification_newoffers">Your new offers:</string>

    <!-- Clip Button String-->
    <string name="offer_clip_unclipped">Clip\nCoupon</string>
    <string name="offer_clip_clipped">Clipped</string>

    <!--Offer JSON String-->
    <string name="offer_data_json">[
    {
        \"offerId\": 0,
        \"description\": \"All Natural Eggs Grade-A\",
        \"expiration\": \"\",
        \"heading\": \"Save 25¢\"
    },
    {
        \"offerId\": 1,
        \"description\": \"Breakstone\'s Cottage Cheese Doubles\",
        \"expiration\": \"\",
        \"heading\": \"Save 50¢\"
    },
    {
        \"offerId\": 2,
        \"description\": \"General Mills Cheerios Strawberry\",
        \"expiration\": \"\",
        \"heading\": \"Save 50¢\"
    },
    {
        \"offerId\": 3,
        \"description\": \"Pair of Chi Chis\",
        \"expiration\": \"\",
        \"heading\": \"Save $1.00\"
    },
    {
        \"offerId\": 4,
        \"description\": \"Chobani Greek Yogurt\",
        \"expiration\": \"\",
        \"heading\": \"Save 75¢\"
    },
    {
        \"offerId\": 5,
        \"description\": \"Pair of Florida Naturals\",
        \"expiration\": \"\",
        \"heading\": \"Save $1.00\"
    },
    {
        \"offerId\": 6,
        \"description\": \"Pack of three General Mills Cheerios\",
        \"expiration\": \"\",
        \"heading\": \"Save $1.50\"
    },
    {
        \"offerId\": 7,
        \"description\": \"Gerber Oranges\",
        \"expiration\": \"\",
        \"heading\": \"Save 40¢\"
    },
    {
        \"offerId\": 8,
        \"description\": \"Glade Expression\",
        \"expiration\": \"\",
        \"heading\": \"Save 75¢\"
    },
    {
        \"offerId\": 9,
        \"description\": \"High Performance Detergent\",
        \"expiration\": \"\",
        \"heading\": \"Save 50¢\"
    },
    {
        \"offerId\": 10,
        \"description\": \"Lobster and Seafood\",
        \"expiration\": \"\",
        \"heading\": \"Save $1.25\"
    },
    {
        \"offerId\": 11,
        \"description\": \"Goldfish Mac and Cheese 3 pac\",
        \"expiration\": \"\",
        \"heading\": \"One Free\"
    },
    {
        \"offerId\": 12,
        \"description\": \"Minute Maide Lemonade\",
        \"expiration\": \"\",
        \"heading\": \"Save 25¢\"
    },
    {
        \"offerId\": 13,
        \"description\": \"Peperage Farms Wheat Bread\",
        \"expiration\": \"\",
        \"heading\": \"Save 25¢\"
    },
    {
        \"offerId\": 14,
        \"description\": \"Perdue Chicken\",
        \"expiration\": \"\",
        \"heading\": \"Save 50¢\"
    },
    {
        \"offerId\": 15,
        \"description\": \"Puffs Plus Lotion\",
        \"expiration\": \"\",
        \"heading\": \"Save 75¢\"
    },
    {
        \"offerId\": 16,
        \"description\": \"Scott 12 Rolls\",
        \"expiration\": \"\",
        \"heading\": \"Save $1.00\"
    },
    {
        \"offerId\": 17,
        \"description\": \"Cranberry Juice\",
        \"expiration\": \"\",
        \"heading\": \"Save 25¢\"
    },
    {
        \"offerId\": 18,
        \"description\": \"Kellogs Special Pack\",
        \"expiration\": \"\",
        \"heading\": \"Buy 3 Get 1\"
    }
]</string>

    <!--History Fragment-->
    <string name="bar_chart_month_help">Monthly Spending</string>
    <string name="categories_pie_chart_description">Categories (12 Months)</string>
    <string name="savings_pie_chart_description">Savings Utilization (12 Months)</string>
    <string name="savings_comparison_description">Savings (12 Months)</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="months_full">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="category_purchase_piechart_data">
        <item>$200</item>
        <item>$400</item>
        <item>$200</item>
        <item>$100</item>
        <item>$100</item>
    </string-array>

    <string-array name="savings_pie_chart_data">
        <item>362.12</item>
        <item>77.34</item>
    </string-array>

</resources>
