<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.theexceptionulls.projectskullnbones.AddCardActivity">

    <TextView
        android:id="@+id/select_store_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_card_select_store_label"/>

    <Spinner
        android:id="@+id/store_list_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_store_label"/>

    <TextView
        android:id="@+id/add_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/store_list_spinner"
        android:text="@string/add_card_add_number_label"/>

    <EditText
        android:id="@+id/add_number_view"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_number_label"
        />

    <Button
        android:id="@+id/scan_card_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_number_label"
        android:layout_toRightOf="@id/add_number_view"
        android:text="S"
        />

    <Button
        android:id="@+id/take_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scan_card_btn"
        android:text="@string/add_card_take_photo_label"/>

</RelativeLayout>
