<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_bar_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/bar_chart_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_action_back"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/bar_chart_month_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:text="@string/bar_chart_month_help"
                    android:textSize="16sp" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/bar_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_below="@+id/bar_chart_month_help"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/bar_chart_month"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_below="@+id/bar_chart_back"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:visibility="gone" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_pie_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/categories_pie_chart_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/categories_pie_chart_description"
                    android:textSize="16sp" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pie_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_below="@+id/categories_pie_chart_description"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_line_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/savings_line_chart_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/savings_comparison_description"
                    android:textSize="16sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/line_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_below="@+id/savings_line_chart_description"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_savings_comparison"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/savings_pie_chart_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/savings_pie_chart_description"
                    android:textSize="16sp" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/savings_pie_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_below="@+id/savings_pie_chart_description"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>

